wordpress/out/wordpress/templates/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: "wordpress"
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/version: 6.7.1
    helm.sh/chart: wordpress-24.0.7
  spec:
    type: ClusterIP
    sessionAffinity: None
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: http
        nodePort: null
      - name: https
        port: 443
        protocol: TCP
        targetPort: https
        nodePort: null
    selector:
      app.kubernetes.io/instance: wordpress
      app.kubernetes.io/name: wordpress
---
